--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,15 +1,6 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
   width: 100%;
-  padding-inline: clamp(16px, 4vw, 24px);
+  margin: 0;
 }
-
-@media screen and (max-width: 905px) {
-  #app {
-    padding: 0 20px;
-  }
-}
-
